--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
                             <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div>
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
-                                <h6 class="card-title">@Model.ElementAt(i).ProductName</h6>
+                                <h6 class="card-title product-name">@Model.ElementAt(i).ProductName</h6>
                                 <h5 class="card-title pricesale m-0">@Model.ElementAt(i).UnitPrice</h5>
                                 <h6 class="card-title price text-muted mt-1">@Model.ElementAt(i).MSRP</h6>
                                 <div>
@@ -120,7 +120,7 @@
                             <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div>
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
-                                <h6 class="card-title">@Model.ElementAt(i).ProductName</h6>
+                                <h6 class="card-title product-name">@Model.ElementAt(i).ProductName</h6>
                                 <h5 class="card-title pricesale m-0">@Model.ElementAt(i).UnitPrice</h5>
                                 <h6 class="card-title price text-muted mt-1">@Model.ElementAt(i).MSRP</h6>
                                 <div>
@@ -172,7 +172,7 @@
                             <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div>
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
-                                <h6 class="card-title">@Model.ElementAt(i).ProductName</h6>
+                                <h6 class="card-title product-name">@Model.ElementAt(i).ProductName</h6>
                                 <h5 class="card-title pricesale m-0">@Model.ElementAt(i).UnitPrice</h5>
                                 <h6 class="card-title price text-muted mt-1">@Model.ElementAt(i).MSRP</h6>
                                 <div>
@@ -219,7 +219,7 @@
                             <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div> @*Hơn 4 triệu thì cho trả góp*@
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
-                                <h6 class="card-title">@Model.ElementAt(i).ProductName</h6>
+                                <h6 class="card-title  product-name">@Model.ElementAt(i).ProductName</h6>
                                 <h5 class="card-title pricesale m-0">@Model.ElementAt(i).UnitPrice</h5>
                                 <h6 class="card-title price text-muted mt-1">@Model.ElementAt(i).MSRP</h6>
                                 <div>
@@ -273,7 +273,7 @@
                         <div class="card">
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
-                                <h6 class="card-title">@Model.ElementAt(i).ProductName</h6>
+                                <h6 class="card-title product-name">@Model.ElementAt(i).ProductName</h6>
                                 <h5 class="card-title pricesale m-0">@Model.ElementAt(i).UnitPrice</h5>
                                 <h6 class="card-title price text-muted mt-1">@Model.ElementAt(i).MSRP</h6>
                                 <div>
@@ -324,7 +324,7 @@
                         <div class="card">
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
-                                <h6 class="card-title">@Model.ElementAt(i).ProductName</h6>
+                                <h6 class="card-title product-name">@Model.ElementAt(i).ProductName</h6>
                                 <h5 class="card-title pricesale m-0">@Model.ElementAt(i).UnitPrice</h5>
                                 <h6 class="card-title price text-muted mt-1">@Model.ElementAt(i).MSRP</h6>
                                 <div>
