--- a/wwwroot/css/views/home/index.css
+++ b/wwwroot/css/views/home/index.css
@@ -79,6 +79,15 @@ a:hover {
 .card-body {
     min-height: 175px;
 }
+.product-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    width: 200px;
+}
 h5.pricesale {
     color: #be1e2d;
 }
