--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -115,7 +115,7 @@
         <div class="highlight">
             @for (int i = 7; i < 15; i++) {
                 <div>
-                    <a href="#">
+                    <a asp-controller="Products" asp-action="Details" asp-route-id="@Model.ElementAt(i).ProductId">
                         <div class="card">
                             <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div>
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
@@ -167,7 +167,7 @@
         <div class="highlight">
             @for (int i = 15; i < 23; i++) {
                 <div>
-                    <a href="#">
+                    <a asp-controller="Products" asp-action="Details" asp-route-id="@Model.ElementAt(i).ProductId">
                         <div class="card">
                             <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div>
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
@@ -214,7 +214,7 @@
         <div class="highlight">
             @for (int i = 23; i < 27; i++) {
                 <div>
-                    <a href="#">
+                    <a asp-controller="Products" asp-action="Details" asp-route-id="@Model.ElementAt(i).ProductId">
                         <div class="card">
                             <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div> @*Hơn 4 triệu thì cho trả góp*@
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
@@ -269,7 +269,7 @@
         <div class="highlight">
             @for (int i = 27; i < 31; i++) {
                 <div>
-                    <a href="#">
+                    <a asp-controller="Products" asp-action="Details" asp-route-id="@Model.ElementAt(i).ProductId">
                         <div class="card">
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
@@ -304,7 +304,7 @@
     </div>
     <div class="/accessories mt-4">
         <div class="mb-3">
-            <h4 class="d-inline"><a href="/accessories">PHỤ KIỆN</a></h4>
+            <h4 class="d-inline"><a asp-controller="Products" asp-action="Accessories" >PHỤ KIỆN</a></h4>
             <div class="d-l2" style="float: right">
                <a class="btn" id="Apple" asp-controller="Products" asp-action="Category" asp-route-id="46">Apple</a>
                <a class="btn" id="Razer" asp-controller="Products" asp-action="Category" asp-route-id="54">Razer</a>
@@ -320,7 +320,7 @@
         <div class="highlight">
             @for (int i = 31; i < 35; i++) {
                 <div>
-                    <a href="#">
+                    <a asp-controller="Products" asp-action="Details" asp-route-id="@Model.ElementAt(i).ProductId">
                         <div class="card">
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
