update lọc + nhiều thứ

--- a/Areas/Admin/Views/SaleManagers/ProductBill.cshtml
+++ b/Areas/Admin/Views/SaleManagers/ProductBill.cshtml
@@ -67,7 +67,7 @@
                                         <td><span>@Html.DisplayFor(model => item.OrderId)</span></td>
                                         <td><span style= "white-space: pre-line; 
 }">
-                                            @Html.DisplayFor(model => item.Product.ProductName)</span></td>
+                                            @Html.DisplayFor(model => item.Voucher)</span></td>
                                          <td><span style= "white-space: pre-line;
 }">
                                             @Html.DisplayFor(model => item.IDSKU)</span></td>
