--- a/Areas/Admin/Views/Staffs/Index.cshtml
+++ b/Areas/Admin/Views/Staffs/Index.cshtml
@@ -37,7 +37,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <a asp-action="Create"> <h4 class="border-danger">Thêm nhân viên</h4></a>
+                        <a asp-action="Create" > <h4 class ="btn btn-outline-primary">Thêm nhân viên</h4></a>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
