--- a/Views/OrderDetails/Thank.cshtml
+++ b/Views/OrderDetails/Thank.cshtml
@@ -5,3 +5,14 @@
 
 <h2>thanks for purchase or product</h2>
 
+ <script type="text/javascript">
+window.onload = function ()
+{
+    setTimeout(RedirectToUrl, 2000);
+}
+function RedirectToUrl()
+{
+    window.location = "/";
+}
+</script>
+
