--- a/Views/Orders/PaymentConfirm.cshtml
+++ b/Views/Orders/PaymentConfirm.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "PaymentConfirm";
 }
 
-<h2>@ViewBag.Message</h2>
+<h2>hello</h2>
 <script type="text/javascript">
 window.onload = function ()
 {
