--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -15,3 +15,8 @@
     <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Bảo mật 2 lớp</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Dữ liệu cá nhân</a></li>
 </ul>
+
+<ul  class="nav nav-pills flex-column">
+       <li class="nav-item"><a class="nav-link @ManageNavPages.BillNavClass(ViewContext)" id="bill" asp-page="./Bill">Đơn hàng đã mua</a></li>
+
+</ul>                                                                                               
