--- a/Areas/Admin/Views/InventoryManagers/Details_O.cshtml
+++ b/Areas/Admin/Views/InventoryManagers/Details_O.cshtml
@@ -52,7 +52,12 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => item.Order.TransactionNo)
                 </dd>
-
+                 <dt class="col-sm-2">
+                    Mã kho hàng
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => item.Order.InventoryId)
+                </dd>
                 <dt class="col-sm-2">
                     Voucher giảm giá
                 </dt>
