--- a/Areas/Admin/Views/InventoryManagers/Product.cshtml
+++ b/Areas/Admin/Views/InventoryManagers/Product.cshtml
@@ -57,6 +57,7 @@
                                                                 <th>Đơn hàng</th>
                                                                 <th>Sản phẩm</th>
                                                                 <th>Số lượng</th>
+                                                                <th>Kho</th>
                                                                 <th>Tình trạng</th>
                                                                 <th>Duyệt</th>
                                                             </tr>
@@ -80,8 +81,7 @@
                                                                             @Html.DisplayFor(model => item.Quantity)
                                                                         </span>
                                                                     </td>
-
-
+                          
                                                                     <td><span class="badge badge-info">@Html.DisplayFor(model => item.Type)</span></td>
 
                                                                     <td>
