--- a/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -7,29 +7,37 @@
 
 
 <partial name="_StatusMessage" for="StatusMessage" />
-<div>
-        <form id="change-password-form" method="post">
-            <h4 class="text-gray-800">@ViewData["Title"]</h4>
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.OldPassword"></label>
-                <input asp-for="Input.OldPassword" class="form-control" />
-                <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+    <div class="row">
+        <div class="col-md-3">
+            <div>
+                <partial name="_ManageNav" />
             </div>
-            <div class="form-group">
-                <label asp-for="Input.NewPassword"></label>
-                <input asp-for="Input.NewPassword" class="form-control" />
-                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+        </div>
+        <div class="col-md-9">
+            <div>
+                <form id="change-password-form" method="post">
+                    <h4 class="text-gray-800">@ViewData["Title"]</h4>
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Input.OldPassword"></label>
+                        <input asp-for="Input.OldPassword" class="form-control" />
+                        <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.NewPassword"></label>
+                        <input asp-for="Input.NewPassword" class="form-control" />
+                        <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.ConfirmPassword"></label>
+                        <input asp-for="Input.ConfirmPassword" class="form-control" />
+                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-primary" id="changepwdbttn">Đổi mật khẩu</button>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary" id="changepwdbttn">Đổi mật khẩu</button>
-        </form>
-</div>
-
+        </div>
+    </div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
