--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,21 +9,20 @@
 @section Styles {
     <link href="@Url.Content("/css/areas/identity/pages/accounts/manage/_layout.css")" rel="stylesheet" type="text/css" />
 }
-<h5>Quản lý tài khoản</h5>
+<div id="mininav">
+    <div id="managetk" style="display:inline-block" >
+        <a asp-area="Identity" asp-page="/Account/Manage/Index"><h5>Quản lý tài khoản</h5></a>
+    </div>
+    <div style="display:inline-block" class="ml-4" id="history">
+        <a asp-area="Identity" asp-page="/Account/Manage/Bill"><h5>Lịch sử mua hàng</h5></a>
+    </div>
+</div>
 <div>
-    <hr />
-    <div class="row">
-        <div class="col-md-3">
-            <div>
-                <partial name="_ManageNav" />
-            </div>
-        </div>
-        <div class="col-md-9">
-            <div>
+        <div>
+            <div class="mt-3">
                 @RenderBody()
             </div>
         </div>
-    </div>
 </div>
 @section Scripts {
     @RenderSection("Scripts", required: false)
