--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -45,9 +45,9 @@
 </div>
 <main>
     <div>
+        <h6 class="mb-3 mt-3">@Html.DisplayFor(model => model.Product.ProductName)</h6>
         <div class="row mt-2">
             <div class="col">
-                <h5 class="mb-3">@Html.DisplayFor(model => model.Product.ProductName)</h5>
                 <div class="product-slice">
                     <div class="slider-for">
                         <div><img src="@Html.DisplayFor(model => model.Product.Picture)" /></div>
@@ -74,6 +74,7 @@
                    
                     @Html.ActionLink("<p><i class='bi bi-cart-check-fill'></i> MUA NGAY</p>","AddCart","OrderDetails",new {productid = @Model.ProductId},null)
                 </div>
+                @if (Model.Product.Category.ParentCategoryId < 5){
                 <div class="grouping" style="position: relative; top: 100px;">
                     <div class="phienban" id = "verpro">
                         <h6>Phiên bản</h6>
@@ -83,9 +84,11 @@
                         <h6>Màu sắc</h6>
            
                     </div>
-                    <div></div>
-                </div>
+                    <div>
 
+                    </div>
+                </div>
+                }
                 <div class="uudai" style="position: relative; top: 110px;">
                     <h6><i class="bi bi-gift-fill"></i> Ưu đãi</h6>
                     <div class="uudaicontent">
@@ -1489,7 +1492,7 @@
                         @*nhớ add id này để lọc *@
                         <img class="card-img-top" src="@Html.DisplayFor(model => model.Product.Picture)" alt="Iphone 13 Pro Max">
                         <div class="card-body">
-                            <h5 class="card-title">@Html.DisplayFor(model => model.Product.ProductName)</h5>
+                            <h6 class="card-title product-name">@Html.DisplayFor(model => model.Product.ProductName)</h6>
                             <h5 class="card-title pricesale m-0">10.000.000</h5>
                             <h6 class="card-title price text-muted mt-1">11.000.000</h6>
                             <div>
@@ -1776,7 +1779,7 @@
               slidesToScroll: 1,
               asNavFor: '.slider-for',
               centerMode: false,
-              focusOnSelect: true
+              focusOnSelect: false
             });
             $("#cate").attr("href", function(){
                 if (@Model.Product.Category.ParentCategoryId == 1){
