--- a/Views/Products/ExDetails.cshtml
+++ b/Views/Products/ExDetails.cshtml
@@ -42,9 +42,9 @@
 </div>
 <main>
     <div>
+         <h6 class="mb-3 mt-3">@Html.DisplayFor(model => model.ProductName)</h6>
         <div class="row mt-2">
             <div class="col">
-                <h5 class="mb-3">@Html.DisplayFor(model => model.ProductName)</h5>
                 <div class="product-slice">
                     <div class="slider-for">
                         <div><img src="@Html.DisplayFor(model => model.Picture)" /></div>
@@ -71,21 +71,21 @@
                     @Html.ActionLink("<p><i class='bi bi-cart-check-fill'></i> MUA NGAY</p>","AddCart","OrderDetails",new {productid = @Model.ProductId},null)
 
                 </div>
+                @if (Model.Category.ParentCategoryId < 5){
                 <div class="grouping" style="position: relative; top: 100px;">
-                    <div class="phienban">
+                    <div class="phienban" id = "verpro">
                         <h6>Phiên bản</h6>
-                        <a class="btn">128 GB</a>
-                        <a class="btn">256 GB</a>
-                        <a class="btn">512 GB</a>
+   
                     </div>
-                    <div class="mausac">
+                    <div class="mausac" id = "colopro">
                         <h6>Màu sắc</h6>
-                        <a class="btn">Trắng</a>
-                        <a class="btn">Đen</a>
-                        <a class="btn">Đỏ</a>
+           
                     </div>
-                    <div></div>
+                    <div>
+
+                    </div>
                 </div>
+                }
                 <div class="uudai" style="position: relative; top: 110px;">
                     <h6><i class="bi bi-gift-fill"></i> Ưu đãi</h6>
                     <div class="uudaicontent">
@@ -1492,7 +1492,7 @@
                         @*nhớ add id này để lọc *@
                         <img class="card-img-top" src="@Html.DisplayFor(model => model.Picture)" alt="Iphone 13 Pro Max">
                         <div class="card-body">
-                            <h5 class="card-title">@Html.DisplayFor(model => model.ProductName)</h5>
+                            <h6 class="card-title product-name">@Html.DisplayFor(model => model.ProductName)</h6>
                             <h5 class="card-title pricesale m-0">10.000.000</h5>
                             <h6 class="card-title price text-muted mt-1">11.000.000</h6>
                             <div>
@@ -1759,7 +1759,7 @@
               slidesToScroll: 1,
               asNavFor: '.slider-for',
               centerMode: false,
-              focusOnSelect: true
+              focusOnSelect: false
             });
             $("#cate").attr("href", function(){
                 if (@Model.Category.ParentCategoryId == 1){
