Frontend: Still be it

--- a/Areas/Identity/Pages/Account/Manage/Bill.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Bill.cshtml
@@ -2,7 +2,7 @@
 @model WEB2.Areas.Identity.Pages.Account.Manage.BillModel
 
 @{
-    ViewData["Title"] = "Bills";
+    ViewData["Title"] = "Lịch sử mua hàng";
 }
 <table class="table">
     <thead>
