--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <p class="logo mb-0">Zer<span style="color: #be1e2d">o</span>ne.vn</p>
                 </a>
-                <form id="f_search" method="get" method="get" asp-controller="Home" asp-action="Search" style="width: 30%" >
+                <form id="f_search" method="get" method="get" asp-area="" asp-controller="Home" asp-action="Search" style="width: 30%" >
                     <div class="input-group mb-0" style="width: 100%">
                         <input id="ipt_search" type="text" class="form-control" name="searchString" placeholder="Bạn muốn tìm sản phẩm nào ?" aria-label="search" aria-describedby="basic-addon2" />
                         <div class="input-group-append">
